--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -65,6 +66,9 @@ dependencies {
     compile name: 'SMSSDKGUI-2.1.4', ext: 'aar'
     //alibaba的fastjson
     compile 'com.alibaba:fastjson:1.1.56.android'
+
+    //cardView依赖包
+    compile 'com.android.support:cardview-v7:25.3.1'
 
 
 
