--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".loginregister.activity.SelectSchoolActivity"
+            android:name=".loginregister.activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +33,10 @@
                     android:exported="true" />-->
         <activity
             android:name=".loginregister.activity.SubmitTeacherInforActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".loginregister.activity.SelectSchoolActivity"
             android:exported="true" />
 
     </application>
