--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     //cardView依赖包
     compile 'com.android.support:cardview-v7:25.3.1'
 
-
+    //腾讯bugly 的日志展示功能
+    compile 'com.tencent.bugly:crashreport:2.5.0'
 
 }
