--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".test.TestBuglyActivity"
+            android:name=".loginregister.activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,23 +39,23 @@
             android:name=".loginregister.activity.SelectSchoolActivity"
             android:exported="true" />
 
-     <!--   <activity
+        <!--一些用来测试的activity,放在下面-->
+        <activity
             android:name=".test.TestBuglyActivity"
-            android:exported="true" />-->
+            android:exported="true" />
+        <activity
+            android:name=".loginregister.activity.StudentSetPortraitActivity"
+            android:exported="true" />
 
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <!--腾讯bugly所需要的权限-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -64,6 +64,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
 
-
+    <!--摄像头使用权限-->
+    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
