--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,4 +67,7 @@
     <!--摄像头使用权限-->
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <!--改变wifi 状态的权限-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
 </manifest>
