--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.larry.present"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -23,10 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    productFlavors {
     }
 }
 
@@ -44,7 +45,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -52,13 +52,11 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:percent:25.3.1'
     compile 'com.zhy:base-rvadapter:3.0.3'
-
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.3'
-
     //google的gson
     compile 'com.google.code.gson:gson:2.7'
     //短信依赖
@@ -66,11 +64,10 @@ dependencies {
     compile name: 'SMSSDKGUI-2.1.4', ext: 'aar'
     //alibaba的fastjson
     compile 'com.alibaba:fastjson:1.1.56.android'
-
     //cardView依赖包
     compile 'com.android.support:cardview-v7:25.3.1'
-
     //腾讯bugly 的日志展示功能
     compile 'com.tencent.bugly:crashreport:2.5.0'
-
+    //rxpermission
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
 }
