--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".loginregister.activity.SelectSchoolActivity"
+            android:name=".loginregister.activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +27,7 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize" />
-        <!--
-                <activity
-                    android:name=".loginregister.activity.SelectSchoolActivity"
-                    android:exported="true" />-->
+
         <activity
             android:name=".loginregister.activity.SubmitTeacherInforActivity"
             android:exported="true" />
@@ -54,6 +51,23 @@
             android:name=".loginregister.activity.SubmitStudentInfoActivity"
             android:exported="true" />
 
+        <!--选择身份activity-->
+        <activity
+            android:name=".loginregister.activity.SelectIdentityActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".boot.MainActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".test.TestRxjavaActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".test.TestPermissionFragment"
+            android:exported="true" />
+
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -71,10 +85,19 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
 
+
     <!--摄像头使用权限-->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <!--改变wifi 状态的权限-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+    <!--改变网络状态权限-->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+
+    <!--使用wifi自建热点时需要的权限，android 7.0系统需要-->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+
 
 </manifest>
