提交学生修改权限

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:name=".test.TestPermissionFragment"
             android:exported="true" />
 
+        <activity
+            android:name=".test.TestCallPhonePermission"
+            android:exported="true" />
+
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -98,6 +102,9 @@
     <!--使用wifi自建热点时需要的权限，android 7.0系统需要-->
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
+    <!--获取wifi列表的wifi状态权限，需要用到定位权限-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 </manifest>
