--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".loginregister.activity.StudentSetPortraitActivity"
+            android:name=".loginregister.activity.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,18 +33,18 @@
             android:exported="true" />
 
         <!--学生选择学校activity-->
-        <!-- <activity
-             android:name=".loginregister.activity.SelectSchoolActivity"
-             android:exported="true" />-->
+        <activity
+            android:name=".loginregister.activity.SelectSchoolActivity"
+            android:exported="true" />
 
         <!--一些用来测试的activity,放在下面-->
         <activity
             android:name=".test.TestBuglyActivity"
             android:exported="true" />
         <!--学生设置头像activity-->
-        <!-- <activity
-             android:name=".loginregister.activity.StudentSetPortraitActivity"
-             android:exported="true" />-->
+        <activity
+            android:name=".loginregister.activity.StudentSetPortraitActivity"
+            android:exported="true" />
 
         <!--学生提交个人信息activity-->
         <activity
@@ -72,10 +72,9 @@
             android:name=".test.TestCallPhonePermission"
             android:exported="true" />
 
-        <!-- <activity
-             android:name=".sign.activity.TeacherSignActivity"
-             android:exported="true" />-->
-
+        <activity
+            android:name=".sign.activity.TeacherSignActivity"
+            android:exported="true" />
 
         <activity
             android:name=".test.AndroidCameraExample"
