--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,12 +73,18 @@
             android:exported="true" />
 
         <activity
-            android:name=".sign.activity.TeacherSignActivity"
+            android:name=".sign.activity.TeacherSignResultActivity"
             android:exported="true" />
 
         <activity
             android:name=".test.AndroidCameraExample"
             android:exported="true" />
+
+        <activity
+            android:name=".course.activity.AddCourseActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize|adjustPan" />
+
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
