完成学生端的课程查看功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,14 @@
             android:exported="true"
             android:windowSoftInputMode="adjustResize|adjustPan" />
 
+        <activity
+            android:name=".sign.activity.StudentCheckCourseSignInfoActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".sign.activity.StudentCheckDetailSignInfoActivity"
+            android:exported="true" />
+
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
