提交搜描动画，修改登录界面，查看老师信息，查看课程信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,13 @@
             android:name=".sign.activity.StudentCheckDetailSignInfoActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".test.TestAnimationActivity"
+            android:exported="true" />
+
+        <activity android:name=".course.activity.CheckCourseActivity"
+            android:exported="true"/>
+
     </application>
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
