完成设置模块，还有相关的接口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,13 @@
             android:name=".loginregister.activity.StudentUploadPortraitActivity"
             android:exported="true" />
 
+        <activity
+            android:name=".setting.activity.ChangePasswordActivity"
+            android:exported="true" />
+
+        <activity android:name=".setting.activity.FeedbackActivity" />
+
+        <activity android:name=".setting.activity.SettingActivity" />
 
     </application>
 
