增加学生查看头像大图

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,16 +102,16 @@
             android:exported="true" />
 
         <activity
-            android:name=".loginregister.activity.StudentUploadPortraitActivity"
-            android:exported="true" />
-
-        <activity
             android:name=".setting.activity.ChangePasswordActivity"
             android:exported="true" />
 
         <activity android:name=".setting.activity.FeedbackActivity" />
 
         <activity android:name=".setting.activity.SettingActivity" />
+
+        <activity android:name=".sign.fragment.SelectClassActivity" />
+
+        <activity android:name=".loginregister.activity.CheckPortraitActivity" />
 
     </application>
 
