--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile files('libs/android-async-http-1.4.3.jar')
+
+
+    //photoview 图片查看第三方控件
+    compile 'com.bm.photoview:library:1.4.1'
 }
